# OTUS_CPP_for_novice_programmers

./: .gitignore
001_Introduction_to_CPP/1.1.2/: cmd_command  hello_world.cpp
001_Introduction_to_CPP/1.1.3/: CMakeLists.txt  hello_world.cpp  version.cpp  version.h
002_Basic_CPP_Syntax/1.2.1/: baseType_char.cpp
003_Such_different_functions_Modularity/1.3.2/: CMakeLists.txt  calculations.cpp  calculations.h  main.cpp
